# demo-azure-iot-sdk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.py
src/: iothub_sample_client.cpp
